Make sure video can play on mobile

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -2,4 +2,5 @@
   border-radius: 10px;
   max-width: 100%;
   border: 1px solid #00c5e5;
+  background-color: #eef9ff;
 }
