--- a/app.scss
+++ b/app.scss
@@ -187,14 +187,37 @@ th {
 }
 
 .video-container {
+  line-height: 0;
+  font-size: 0;
   width: 100%;
-  height: 0px;
   position: relative;
-  background-color: #eef9ff;
+}
+
+.video-container.paused::before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  content: " ";
+  background-color: rgba(191, 237, 245, 0.5);
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='%2300c5e5' viewBox='0 0 24 24'%3e%3cpath d='M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-3 17v-10l9 5.146-9 4.854z'/%3e%3c/svg%3e");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 100px 100px;
+  pointer-events: none;
+  border-radius: 10px;
+}
+
+.video-container.scaled {
+  height: 0px;
 }
 
 .video-container > video {
   width: 100%;
+}
+
+.video-container.scaled > video {
   height: 100%;
   position: absolute;
   top: 0;
